--- a/checkout.html
+++ b/checkout.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Animated Menu</title>
+    <title>Clothing Website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
         <h1 class="nav-logo">Brand Logo</h1>
         <nav>
             <ul id="navbar">
-                <li><a href="#" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="checkout.html"><img src="image/cart-icon.png" alt="cart" width="30" height="30"></a></li>
