updated index.html and css

--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
         </nav>
     </header>
     <section id="hero">
-        <h2>"Style is a way to say who you are<br>  without having to speak."</h2>
-        <p>Make a statement with us</p>
-        <button class="btn">Shop Now</button>
+        <div class="column">
+            <img src="image/home-page-main-section.jpg" alt="model" style="width:100%">
+        </div>
+        <div class="column text">
+            <h2>"Style is a way to say who you are<br>without having to speak."</h2>
+            <p>Make a statement with us</p>
+            <button class="btn" onclick="location.href ='products.html';">Shop Now</button>
+        </div>
     </section>
     <footer></footer>
     <script src="app.js"></script>
