--- a/index.html
+++ b/index.html
@@ -23,13 +23,37 @@
         <div class="column">
             <img src="image/home-page-main-section.jpg" alt="model" style="width:100%">
         </div>
-        <div class="column text">
+        <div class="text">
             <h2>"Style is a way to say who you are<br>without having to speak."</h2>
             <p>Make a statement with us</p>
             <button class="btn" onclick="location.href ='products.html';">Shop Now</button>
         </div>
     </section>
-    <footer></footer>
+    <footer class="section-p1">
+        <div class="col">
+            <h4>Contact</h4>
+            <p><strong>Address: </strong>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem odit rerum, tempora quam hic soluta iure.</p>
+            <p><strong>Phone: </strong>(+91)0538264882</p>
+            <p><strong>Hours: </strong>9:00 to 18:00 Mon-Sat</p>
+            <div class="social-icons">
+                <h4>Follow us</h4>
+                <a href="https://www.facebook.com/yourprofile" target="_blank">
+                    <img src="image/facebook-app-symbol.png" alt="Facebook">
+                </a>
+                <a href="https://twitter.com/yourprofile" target="_blank">
+                    <img src="image/twitter.png" alt="Twitter">
+                </a>
+                <a href="https://www.instagram.com/yourprofile" target="_blank">
+                    <img src="image/instagram.png" alt="Instagram">
+                </a>
+                <a href="https://www.youtube.com/yourprofile" target="_blank">
+                    <img src="image/youtube.png" alt="Instagram">
+                </a>
+                
+            </div>
+        </div>
+
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
