--- a/login.html
+++ b/login.html
@@ -19,13 +19,13 @@
         </nav>
     </header>
 
-    <form>
+    <form action="/submit-your-form-handler" method="post">
         <h1>Login</h1>
         <input type="text" id="username" placeholder="Enter your username">
-        <label for="username" oneclick="expand(this)">Username</label>
+        <label for="username" onclick="expand(this)">Username</label>
 
-        <input type="paswword" id="password" placeholder="Enter your password">
-        <label for="password" oneclick="expand(this)">Password</label>
+        <input type="password" id="password" placeholder="Enter your password">
+        <label for="password" onclick="expand(this)">Password</label>
 
         <button>SUBMIT</button>
     </form>
