--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
         <input type="text" id="username" placeholder="Enter your username">
         <label for="username" oneclick="expand(this)">Username</label>
 
-        <input type="paswword" id="password" placeholder="Enter your password">
+        <input type="password" id="password" placeholder="Enter your password">
         <label for="password" oneclick="expand(this)">Password</label>
 
         <button>SUBMIT</button>
@@ -38,7 +38,5 @@
             lbl.style.transform="translateY(-45px)";
         }
     </script>
-    <footer></footer>
-    <script src="app.js"></script>
 </body>
 </html>
