--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
                 </div>
               </div>
               <div class="btn-box">
-                <a href="">
+                <a href="checkout.html">
                   Add To Cart
                 </a>
               </div>
@@ -67,7 +67,7 @@
                 </div>
               </div>
               <div class="btn-box">
-                <a href="">
+                <a href="checkout.html">
                   Add To Cart
                 </a>
               </div>
@@ -90,7 +90,7 @@
                 </div>
               </div>
               <div class="btn-box">
-                <a href="">
+                <a href="checkout.html">
                   Add To Cart
                 </a>
               </div>
