--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,28 @@
             </ul>
         </nav>
     </header>
+    <section class="contact-details">
+        <h2>Contact Us</h2>
+        <ul>
+          <li>
+            <i class="fas fa-phone"></i>
+            <span>Phone:</span>
+            <a href="tel:+1234567890">+123 456 7890</a>
+          </li>
+          <li>
+            <i class="fas fa-envelope"></i>
+            <span>Email:</span>
+            <a href="mailto:support@example.com">support@example.com</a>
+          </li>
+          <li>
+            <i class="fas fa-map-marker-alt"></i>
+            <span>Address:</span>
+            <address>
+              Lorem ipsum dolor sit amet consectetur.
+            </address>
+          </li>
+        </ul>
+    </section>
     <footer class="section-p1">
         <div class="col">
             <h4>Contact</h4>
