--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clothing Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style 1.css">
 </head>
 <body>
     <header>
